--- a/styles.css
+++ b/styles.css
@@ -11,32 +11,25 @@ h1 {
   position: relative;
 }
 .t {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .y {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .p {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .y {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .d {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .o {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .r {
-  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container:hover .t {
   display: inline-block;
