--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h1 {
 .p {
   transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.y {
+.i {
   transition: all 2000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .d {
